Aded iOS session runner to build files

--- a/mediapipe/tasks/ios/genai/core/BUILD
+++ b/mediapipe/tasks/ios/genai/core/BUILD
@@ -18,8 +18,9 @@ licenses(["notice"])
 package(default_visibility = ["//mediapipe/tasks:internal"])
 
 exports_files([
-    "sources/LlmTaskRunner.swift",
     "sources/GenAiInferenceError.swift",
+    "sources/LlmSessionRunner.swift"
+    "sources/LlmTaskRunner.swift",
 ])
 
 swift_library(
