Added extra safeguards for response context in LlmSessionRunner

--- a/mediapipe/tasks/ios/genai/core/BUILD
+++ b/mediapipe/tasks/ios/genai/core/BUILD
@@ -19,7 +19,7 @@ package(default_visibility = ["//mediapipe/tasks:internal"])
 
 exports_files([
     "sources/GenAiInferenceError.swift",
-    "sources/LlmSessionRunner.swift"
+    "sources/LlmSessionRunner.swift",
     "sources/LlmTaskRunner.swift",
 ])
 
