Added iOS MPPAudioData test utils

--- a/mediapipe/tasks/ios/test/audio/core/utils/BUILD
+++ b/mediapipe/tasks/ios/test/audio/core/utils/BUILD
@@ -42,3 +42,12 @@ objc_library(
     ],
 )
 
+objc_library(
+    name = "MPPAudioDataTestUtils",
+    srcs = ["sources/MPPAudioData+TestUtils.m"],
+    hdrs = ["sources/MPPAudioData+TestUtils.h"],
+    deps = [
+        "//mediapipe/tasks/ios/audio/core:MPPAudioData",
+    ],
+)
+
