Added stream mode tests for iOS audio classifier

--- a/mediapipe/tasks/ios/test/audio/audio_classifier/BUILD
+++ b/mediapipe/tasks/ios/test/audio/audio_classifier/BUILD
@@ -45,7 +45,9 @@ objc_library(
         "//mediapipe/tasks/ios/audio/core:MPPAudioData",
         "//mediapipe/tasks/ios/common:MPPCommon",
         "//mediapipe/tasks/ios/common/utils:NSStringHelpers",
+        "//mediapipe/tasks/ios/test/audio/core/utils:AVAudioFileTestUtils",
         "//mediapipe/tasks/ios/test/audio/core/utils:AVAudioPCMBufferTestUtils",
+        "//mediapipe/tasks/ios/test/audio/core/utils:MPPAudioDataTestUtils",
         "//mediapipe/tasks/ios/test/utils:MPPFileInfo",
         "//third_party/apple_frameworks:XCTest",
     ],
