Fixed iOS audio record and audio data tests by avoiding audio engine running state checks

--- a/mediapipe/tasks/ios/test/audio/core/BUILD
+++ b/mediapipe/tasks/ios/test/audio/core/BUILD
@@ -112,6 +112,7 @@ objc_library(
     deps = [
         "//mediapipe/tasks/ios/audio/core:MPPAudioData",
         "//mediapipe/tasks/ios/common:MPPCommon",
+        "//mediapipe/tasks/ios/common/utils:MPPCommonUtils",
         "//mediapipe/tasks/ios/test/audio/core/utils:AVAudioPCMBufferTestUtils",
         "//mediapipe/tasks/ios/test/utils:MPPFileInfo",
         "//third_party/apple_frameworks:AVFoundation",
