Pre release update (#87)
* Pre release update

* Update readme.

* ovms 2024.4

--- a/Dockerfile.openvino
+++ b/Dockerfile.openvino
@@ -102,7 +102,7 @@ azel-${BAZEL_VERSION}-installer-linux-x86_64.sh" && \
     rm -f /bazel/installer.sh
 
 #OPENVINO
-ARG DLDT_PACKAGE_URL=https://storage.openvinotoolkit.org/repositories/openvino/packages/2024.3/linux/l_openvino_toolkit_ubuntu20_2024.3.0.16041.1e3b88e4e3f_x86_64.tgz
+ARG DLDT_PACKAGE_URL
 # OV toolkit package
 RUN wget -nv $DLDT_PACKAGE_URL && \
     mkdir /opt/intel && \
