--- a/.github/ISSUE_TEMPLATE/18-solution-legacy-issue-template.yaml
+++ b/.github/ISSUE_TEMPLATE/18-solution-legacy-issue-template.yaml
@@ -1,11 +1,11 @@
 name: Solution(Legacy) Issue
-description: Use this template for assistance with a specific Mediapipe solution (google.github.io/mediapipe/solutions) such as "Pose", including inference model usage/training, solution-specific calculators etc.
+description: Use this template for assistance with a specific Mediapipe solution (google-ai-edge.github.io/mediapipe/solutions) such as "Pose", including inference model usage/training, solution-specific calculators etc.
 labels: 'type:support'
 body:
   - type: markdown
     id: linkmodel
     attributes:
-      value: Please make sure that this is a [solution](https://google.github.io/mediapipe/solutions/solutions.html) issue.
+      value: Please make sure that this is a [solution](https://google-ai-edge.github.io/mediapipe/solutions/solutions.html) issue.
   - type: dropdown
     id: customcode_model
     attributes:
