--- a/.github/ISSUE_TEMPLATE/16-bug-issue-template.yaml
+++ b/.github/ISSUE_TEMPLATE/16-bug-issue-template.yaml
@@ -5,7 +5,7 @@ body:
   - type: markdown
     id: link
     attributes:
-      value: Please make sure that this is a bug and also refer to the [troubleshooting](https://google.github.io/mediapipe/getting_started/troubleshooting.html), FAQ documentation before raising any issues.
+      value: Please make sure that this is a bug and also refer to the [troubleshooting](https://google-ai-edge.github.io/mediapipe/getting_started/troubleshooting.html), FAQ documentation before raising any issues.
   - type: dropdown
     id: customcode_model
     attributes:
