Move tensorflow lite python calls to ai-edge-litert.
PiperOrigin-RevId: 690670455

--- a/mediapipe/model_maker/requirements_lock.txt
+++ b/mediapipe/model_maker/requirements_lock.txt
@@ -15,8 +15,6 @@ absl-py==1.4.0
     #   tensorflow-metadata
     #   tensorflow-model-optimization
     #   tf-slim
-ai-edge-litert-nightly==1.0.1.dev20241022
-    # via -r mediapipe/opensource_only/model_maker_requirements_bazel.txt
 array-record==0.5.1
     # via tensorflow-datasets
 astunparse==1.6.3
@@ -50,9 +48,7 @@ etils[array-types,enp,epath,epy,etqdm,etree]==1.5.2
     #   array-record
     #   tensorflow-datasets
 flatbuffers==24.3.25
-    # via
-    #   ai-edge-litert-nightly
-    #   tensorflow
+    # via tensorflow
 fonttools==4.54.1
     # via matplotlib
 fsspec==2024.9.0
@@ -124,7 +120,6 @@ ml-dtypes==0.3.2
 numpy==1.26.4
     # via
     #   -r mediapipe/opensource_only/model_maker_requirements_bazel.txt
-    #   ai-edge-litert-nightly
     #   contourpy
     #   etils
     #   h5py
