No public description
PiperOrigin-RevId: 690728138

--- a/mediapipe/tasks/web/audio/audio_classifier/BUILD
+++ b/mediapipe/tasks/web/audio/audio_classifier/BUILD
@@ -64,5 +64,5 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "audio_classifier_test",
-    deps = [":audio_classifier_test_lib"],
+    srcs = [":audio_classifier_test_lib"],
 )
