--- a/mediapipe/tasks/web/audio/audio_embedder/BUILD
+++ b/mediapipe/tasks/web/audio/audio_embedder/BUILD
@@ -61,5 +61,5 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "audio_embedder_test",
-    deps = [":audio_embedder_test_lib"],
+    srcs = [":audio_embedder_test_lib"],
 )
