--- a/mediapipe/tasks/web/text/text_classifier/BUILD
+++ b/mediapipe/tasks/web/text/text_classifier/BUILD
@@ -65,5 +65,5 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "text_classifier_test",
-    deps = [":text_classifier_test_lib"],
+    srcs = [":text_classifier_test_lib"],
 )
