--- a/mediapipe/tasks/web/vision/face_landmarker/BUILD
+++ b/mediapipe/tasks/web/vision/face_landmarker/BUILD
@@ -85,6 +85,6 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "face_landmarker_test",
+    srcs = [":face_landmarker_test_lib"],
     tags = ["nomsan"],
-    deps = [":face_landmarker_test_lib"],
 )
