--- a/mediapipe/tasks/web/vision/face_stylizer/BUILD
+++ b/mediapipe/tasks/web/vision/face_stylizer/BUILD
@@ -53,6 +53,6 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "face_stylizer_test",
+    srcs = [":face_stylizer_test_lib"],
     tags = ["nomsan"],
-    deps = [":face_stylizer_test_lib"],
 )
