--- a/mediapipe/tasks/web/vision/gesture_recognizer/BUILD
+++ b/mediapipe/tasks/web/vision/gesture_recognizer/BUILD
@@ -75,6 +75,6 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "gesture_recognizer_test",
+    srcs = [":gesture_recognizer_test_lib"],
     tags = ["nomsan"],
-    deps = [":gesture_recognizer_test_lib"],
 )
