--- a/mediapipe/tasks/web/vision/object_detector/BUILD
+++ b/mediapipe/tasks/web/vision/object_detector/BUILD
@@ -66,6 +66,6 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "object_detector_test",
+    srcs = [":object_detector_test_lib"],
     tags = ["nomsan"],
-    deps = [":object_detector_test_lib"],
 )
