--- a/mediapipe/tasks/web/components/processors/BUILD
+++ b/mediapipe/tasks/web/components/processors/BUILD
@@ -27,7 +27,7 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "classifier_options_test",
-    deps = [":classifier_options_test_lib"],
+    srcs = [":classifier_options_test_lib"],
 )
 
 mediapipe_ts_library(
@@ -53,7 +53,7 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "classifier_result_test",
-    deps = [":classifier_result_test_lib"],
+    srcs = [":classifier_result_test_lib"],
 )
 
 mediapipe_ts_library(
@@ -98,7 +98,7 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "embedder_result_test",
-    deps = [":embedder_result_test_lib"],
+    srcs = [":embedder_result_test_lib"],
 )
 
 mediapipe_ts_library(
@@ -123,7 +123,7 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "embedder_options_test",
-    deps = [":embedder_options_test_lib"],
+    srcs = [":embedder_options_test_lib"],
 )
 
 mediapipe_ts_library(
@@ -147,5 +147,5 @@ mediapipe_ts_library(
 
 jasmine_node_test(
     name = "landmark_result_test",
-    deps = [":landmark_result_test_lib"],
+    srcs = [":landmark_result_test_lib"],
 )
