Add libc++_shared.so to MediaPipe Android examples.
PiperOrigin-RevId: 691554917

--- a/mediapipe/examples/android/src/java/com/google/mediapipe/apps/basic/BUILD
+++ b/mediapipe/examples/android/src/java/com/google/mediapipe/apps/basic/BUILD
@@ -80,5 +80,6 @@ android_binary(
     deps = [
         ":basic_lib",
         ":mediapipe_jni_lib",
+        "//third_party:libc++_shared_lib",
     ],
 )
