--- a/mediapipe/examples/android/src/java/com/google/mediapipe/apps/iristrackinggpu/BUILD
+++ b/mediapipe/examples/android/src/java/com/google/mediapipe/apps/iristrackinggpu/BUILD
@@ -60,6 +60,7 @@ android_binary(
         "//mediapipe/examples/android/src/java/com/google/mediapipe/apps/basic:basic_lib",
         "//mediapipe/framework/formats:landmark_java_proto_lite",
         "//mediapipe/java/com/google/mediapipe/framework:android_framework",
+        "//third_party:libc++_shared_lib",
         "@com_google_protobuf//:protobuf_javalite",
     ],
 )
