--- a/mediapipe/examples/android/src/java/com/google/mediapipe/apps/facemeshgpu/BUILD
+++ b/mediapipe/examples/android/src/java/com/google/mediapipe/apps/facemeshgpu/BUILD
@@ -59,5 +59,6 @@ android_binary(
         "//mediapipe/examples/android/src/java/com/google/mediapipe/apps/basic:basic_lib",
         "//mediapipe/framework/formats:landmark_java_proto_lite",
         "//mediapipe/java/com/google/mediapipe/framework:android_framework",
+        "//third_party:libc++_shared_lib",
     ],
 )
