--- a/mediapipe/gpu/BUILD
+++ b/mediapipe/gpu/BUILD
@@ -226,7 +226,9 @@ cc_library(
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
         "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/strings:string_view",
         "@com_google_absl//absl/synchronization",
     ] + select({
         "//conditions:default": [],
