Improves debug output for Packet::Get() on empty packet
PiperOrigin-RevId: 695660916

--- a/mediapipe/framework/api2/BUILD
+++ b/mediapipe/framework/api2/BUILD
@@ -139,15 +139,19 @@ cc_library(
     hdrs = ["packet.h"],
     deps = [
         ":tuple",
+        "//mediapipe/framework:legacy_calculator_support",
         "//mediapipe/framework:packet",
+        "//mediapipe/framework:port",
         "//mediapipe/framework:timestamp",
         "//mediapipe/framework/port:logging",
         "//mediapipe/framework/port:status",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/log:absl_check",
+        "@com_google_absl//absl/log:absl_log",
         "@com_google_absl//absl/meta:type_traits",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
     ],
 )
 
