Enable GpuBufferStorageAhwb ASYNC usage for use case: AhwbView write -> GlTextureView read
* Adding AhwbView::SetUsageFence to allow for automatic async synchronization when getting GlTextureView
* Adding AhwbView::GetWidthStepBytes to properly fill bytes
* Adding GpuBufferStorageAhwb::Reuse to allow reusing storage for new writes
* Exposing ReadTexture from gl_texture_buffer.cc to read GL texture data

PiperOrigin-RevId: 695766930

--- a/mediapipe/framework/formats/BUILD
+++ b/mediapipe/framework/formats/BUILD
@@ -130,6 +130,7 @@ cc_library(
     deps = [
         ":hardware_buffer",
         "//mediapipe/framework:port",
+        "//mediapipe/framework/formats:unique_fd",
         "//mediapipe/gpu:gpu_buffer_storage",
     ],
 )
