Add IsSignaled function (the previous SyncWait for checking status triggers unnessary StrFormat)
PiperOrigin-RevId: 695892325

--- a/mediapipe/util/BUILD
+++ b/mediapipe/util/BUILD
@@ -204,9 +204,8 @@ cc_library(
         "//mediapipe/framework/formats:unique_fd",
         "//mediapipe/framework/port:ret_check",
         "//mediapipe/framework/port:status",
-        "@com_google_absl//absl/cleanup",
-        "@com_google_absl//absl/log:absl_log",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/time",
     ],
