Udpate SyncWait/IsSignaled to work with SharedFd.
PiperOrigin-RevId: 696589669

--- a/mediapipe/util/BUILD
+++ b/mediapipe/util/BUILD
@@ -208,6 +208,7 @@ cc_library(
     hdrs = ["sync_wait.h"],
     visibility = ["//mediapipe:__subpackages__"],
     deps = [
+        "//mediapipe/framework/formats:shared_fd",
         "//mediapipe/framework/formats:unique_fd",
         "//mediapipe/framework/port:ret_check",
         "//mediapipe/framework/port:status",
@@ -224,6 +225,7 @@ cc_test(
     deps = [
         ":sync_wait",
         "//mediapipe/framework:port",
+        "//mediapipe/framework/formats:shared_fd",
         "//mediapipe/framework/formats:unique_fd",
         "//mediapipe/framework/port:benchmark",
         "//mediapipe/framework/port:gtest_main",
