--- a/Dockerfile.openvino
+++ b/Dockerfile.openvino
@@ -35,6 +35,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         ffmpeg \
         git \
         wget \
+        less \
+        tmux \
         unzip \
         nodejs \
         npm \
@@ -192,7 +194,7 @@ FROM base as build
 RUN wget -O video.mp4 "https://www.pexels.com/download/video/3044127/?fps=24.0&h=1080&w=1920"
 COPY mediapipe /mediapipe/mediapipe/
 COPY third_party /mediapipe/third_party/
-COPY .bazelrc /mediapipe/
+COPY .bazelrc .user.bazelr[c] /mediapipe/
 COPY .bazelversion /mediapipe/
 COPY *.sh /mediapipe/
 COPY *.py /mediapipe/
@@ -205,15 +207,18 @@ COPY platform_mappings /mediapipe/
 COPY README.md /mediapipe/
 COPY platform_mappings /mediapipe/
 COPY tsconfig.json /mediapipe/
-COPY requirements.txt /mediapipe/
+COPY requirements*.txt /mediapipe/
+COPY yarn.lock /mediapipe/
 
 # BUILD Geti calculators
+#RUN bazel build   --repo_env=HERMETIC_PYTHON_VERSION=3.10 //mediapipe:geti_targets
 RUN bazel build //mediapipe:geti_targets
 
 # BUILD examples
 ENV GLOG_logtostderr=1
 ENV LD_LIBRARY_PATH="/opt/intel/openvino/runtime/3rdparty/tbb/lib:/opt/intel/openvino/runtime/lib/intel64/:${LD_LIBRARY_PATH}"
 RUN python setup_ovms.py --get_models && python setup_ovms.py --convert_pose --force
+#FROM build as ASD
 RUN bash build_desktop_examples.sh -b
 RUN curl https://storage.googleapis.com/mediapipe-assets/ssdlite_object_detection_labelmap.txt -o mediapipe/models/ssdlite_object_detection_labelmap.txt
 
