Remove python setup.py
Step 78/78 : RUN python setup.py install
 ---> Running in 0c28eef5e6cb
+ python setup.py install
running install
/mediapipe/setup.py:501: SetuptoolsDeprecationWarning: setup.py install
is deprecated.
!!

        ********************************************************************************
        Please avoid running ``setup.py`` directly.
        Instead, use pypa/build, pypa/installer or other
        standards-based tools.

        See
https://blog.ganssle.io/articles/2021/10/setup-py-deprecated.html for
details.
        ********************************************************************************

!!
  install.install.initialize_options(self)

--- a/Dockerfile.openvino
+++ b/Dockerfile.openvino
@@ -223,7 +223,7 @@ RUN bash build_desktop_examples.sh -b
 RUN curl https://storage.googleapis.com/mediapipe-assets/ssdlite_object_detection_labelmap.txt -o mediapipe/models/ssdlite_object_detection_labelmap.txt
 
 # BUILD python framework
-RUN python setup.py install
+#RUN python setup.py install
 ## End of build image ################################################################
 ######################################################################################
 ## Start of demos image - minimal size ###############################################
