--- a/mediapipe/tasks/java/com/google/mediapipe/tasks/core/jni/BUILD
+++ b/mediapipe/tasks/java/com/google/mediapipe/tasks/core/jni/BUILD
@@ -67,8 +67,10 @@ cc_library(
         "//mediapipe/java/com/google/mediapipe/framework/jni:class_registry",
         "//mediapipe/java/com/google/mediapipe/framework/jni:jni_util",
         "//mediapipe/tasks/cc/genai/inference/c:llm_inference_engine_hdr",  # needed with ENABLE_ODML_MAVEN_BUILD
+        "//mediapipe/tasks/cc/genai/inference/proto:tflite_delegate_options_cc_proto",
         "//mediapipe/tasks/java/com/google/mediapipe/tasks/core/jni/proto:llm_options_cc_proto",
         "//mediapipe/tasks/java/com/google/mediapipe/tasks/core/jni/proto:llm_response_context_cc_proto",
+        "//third_party/skia/HEAD:core",
         "@com_google_absl//absl/log:absl_log",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
