Temporarily disable python demos
* Disable LLm calculators from building in OVMS
defines from .bazelrc doesn't work for some reason
external/ovms/src/rerank/rerank_calculator.cc:373:29: error:
'rerank_calculator_logger' was not declared in this scope
Even tough ovms is build with no mp no py option
* Disable nonbuildable protos from setup.py
* Patch for incompatible opencv with ovms
external/ovms/src/tensor_conversion.cpp:55:16: error: 'CV_16F' was not
declared in this scope; did you mean 'CV_16S'?
Leave model loader out as not needed
* Turn off Python demos testing in CI
This is yet to be enabled fully after update to 0.10.18
* Restore to updated zlib version

--- a/.bazelrc
+++ b/.bazelrc
@@ -130,3 +130,5 @@ build --define=xnn_enable_avx512fp16=false
 build --define=xnn_enable_avx512amx=false
 build --repo_env=HERMETIC_PYTHON_VERSION=3.11
 build --incompatible_strict_action_env
+# required due to use strict_action_env
+test --test_env LD_LIBRARY_PATH=/opt/opencv/lib/:/opt/intel/openvino/runtime/lib/intel64/:/opt/intel/openvino/runtime/3rdparty/tbb/lib/
