No public description
PiperOrigin-RevId: 719416271

--- a/mediapipe/java/com/google/mediapipe/framework/image/BUILD
+++ b/mediapipe/java/com/google/mediapipe/framework/image/BUILD
@@ -33,5 +33,7 @@ android_library(
 filegroup(
     name = "java_src",
     srcs = glob(["*.java"]),
-    visibility = ["//visibility:private"],
+    visibility = [
+        "//mediapipe:__subpackages__",
+    ],
 )
