--- a/mediapipe/tasks/cc/genai/inference/utils/llm_utils/BUILD
+++ b/mediapipe/tasks/cc/genai/inference/utils/llm_utils/BUILD
@@ -16,6 +16,8 @@
 
 package(default_visibility = [
     "//mediapipe/tasks/cc:__subpackages__",
+    "//third_party/odml/infra/genai/inference:__subpackages__",
+    "//third_party/odml/litert:__subpackages__",
 ])
 
 cc_library(
